GEMS file format support, experimental

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,6 +62,7 @@ set(SOURCES
   "src/FileFormats/ffmt_factory.cpp"
   "src/FileFormats/format_deflemask_dmp.cpp"
   "src/FileFormats/format_tfi.cpp"
+  "src/FileFormats/format_gems_pat.cpp"
   "src/FileFormats/format_vgm_import.cpp"
   "src/FileFormats/format_wohlstand_opn2.cpp"
   "src/formats_sup.cpp"
