add missing files to cmake sources, fixing build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,7 +65,9 @@ set(SOURCES
   "src/FileFormats/format_tfi.cpp"
   "src/FileFormats/format_gems_pat.cpp"
   "src/FileFormats/format_m2v_gyb.cpp"
+  "src/FileFormats/format_tomsoft_gin.cpp"
   "src/FileFormats/format_vgm_import.cpp"
+  "src/FileFormats/format_gym_import.cpp"
   "src/FileFormats/format_wohlstand_opn2.cpp"
   "src/formats_sup.cpp"
   "src/importer.cpp"
