Added Mame OPNA emulator

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -86,6 +86,9 @@ set(CHIPS_SOURCES
   "src/opl/chips/nuked/ym3438.c"
   "src/opl/chips/mame_opn2.cpp"
   "src/opl/chips/mame/mame_ym2612fm.c"
+  "src/opl/chips/mame_opna.cpp"
+  "src/opl/chips/mamefm/fm.cpp"
+  "src/opl/chips/mamefm/ymdeltat.cpp"
   "src/opl/chips/gx_opn2.cpp"
   "src/opl/chips/gx/gx_ym2612.c"
   "src/opl/chips/np2_opna.cpp"
