--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -209,7 +209,7 @@ if(USE_RTMIDI)
     target_link_libraries(RtMidi PUBLIC "winmm")
   elseif(CMAKE_SYSTEM_NAME STREQUAL "Darwin")
     target_compile_definitions(RtMidi PUBLIC "__MACOSX_CORE__")
-    find_library(COREMIDI_LIBRARY "CoreMidi")
+    find_library(COREMIDI_LIBRARY "CoreMIDI")
     target_link_libraries(RtMidi PUBLIC "${COREMIDI_LIBRARY}")
   endif()
   target_sources(OPN2BankEditor PRIVATE "src/midi/midi_rtmidi.cpp")
