--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -85,25 +85,7 @@ add_library(FileFormats STATIC ${FILEFORMATS_SOURCES})
 target_include_directories(FileFormats PUBLIC "src")
 target_link_libraries(FileFormats PUBLIC Common)
 
-set(CHIPS_SOURCES
-  "src/opl/chips/gens_opn2.cpp"
-  "src/opl/chips/gens/Ym2612_Emu.cpp"
-  "src/opl/chips/nuked_opn2.cpp"
-  "src/opl/chips/nuked/ym3438.c"
-  "src/opl/chips/mame_opn2.cpp"
-  "src/opl/chips/mame/mame_ym2612fm.c"
-  "src/opl/chips/mame_opna.cpp"
-  "src/opl/chips/mamefm/fm.cpp"
-  "src/opl/chips/mamefm/ymdeltat.cpp"
-  "src/opl/chips/gx_opn2.cpp"
-  "src/opl/chips/gx/gx_ym2612.c"
-  "src/opl/chips/np2_opna.cpp"
-  "src/opl/chips/np2/fmgen_file.cpp"
-  "src/opl/chips/np2/fmgen_fmgen.cpp"
-  "src/opl/chips/np2/fmgen_fmtimer.cpp"
-  "src/opl/chips/np2/fmgen_opna.cpp"
-  "src/opl/chips/np2/fmgen_psg.cpp"
-)
+include(src/opl/chips/chipset.cmake)
 add_library(Chips STATIC ${CHIPS_SOURCES})
 target_include_directories(Chips PUBLIC "src")
 
