eliminate the error string redundancy

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,6 +66,7 @@ target_link_libraries(Common PUBLIC Qt5::Widgets)
 
 set(FILEFORMATS_SOURCES
   "src/FileFormats/ffmt_base.cpp"
+  "src/FileFormats/ffmt_enums.cpp"
   "src/FileFormats/ffmt_factory.cpp"
   "src/FileFormats/format_deflemask_dmp.cpp"
   "src/FileFormats/format_tfi.cpp"
