--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -102,7 +102,7 @@ set(MEASURER_SOURCES
 add_library(Measurer STATIC ${MEASURER_SOURCES})
 target_include_directories(Measurer PUBLIC "src")
 target_link_libraries(Measurer PUBLIC Chips Common Qt5::Concurrent)
-if(NOT MSVC)
+if(NOT MSVC AND NOT APPLE)
   target_compile_options(Measurer PRIVATE "-fopenmp")
 endif()
 if(ENABLE_PLOTS)
@@ -182,7 +182,9 @@ target_link_libraries(OPN2BankEditor PRIVATE Qt5::Widgets Qt5::Concurrent ${CMAK
 if(ENABLE_PLOTS)
   target_link_libraries(OPN2BankEditor PRIVATE ${QWT_LIBRARIES})
 endif()
-install(TARGETS OPN2BankEditor DESTINATION "bin" RENAME "opn2_bank_editor")
+if(NOT APPLE)
+    install(TARGETS OPN2BankEditor DESTINATION "bin" RENAME "opn2_bank_editor")
+endif()
 
 if(CMAKE_SYSTEM_NAME STREQUAL "Windows")
   set(ICON "${CMAKE_SOURCE_DIR}/src/resources/res.rc")
@@ -192,6 +194,7 @@ elseif(CMAKE_SYSTEM_NAME STREQUAL "Darwin")
   set(ICON "${CMAKE_SOURCE_DIR}/src/resources/opn2.icns")
   set_source_files_properties("${ICON}" PROPERTIES MACOSX_PACKAGE_LOCATION "Resources")
   target_sources(OPN2BankEditor PRIVATE "${ICON}")
+  set_target_properties(OPN2BankEditor PROPERTIES OUTPUT_NAME "OPN2 Bank Editor")
 endif()
 
 if(USE_RTMIDI)
@@ -248,12 +251,15 @@ if(USE_RTAUDIO)
     target_compile_definitions(RtAudio PUBLIC "__MACOSX_CORE__")
     find_library(COREAUDIO_LIBRARY "CoreAudio")
     target_link_libraries(RtAudio PUBLIC "${COREAUDIO_LIBRARY}")
+    find_library(COREFOUNDATION_LIBRARY "CoreFoundation")
+    target_link_libraries(RtAudio PUBLIC "${COREFOUNDATION_LIBRARY}")
   endif()
   target_sources(OPN2BankEditor PRIVATE "src/audio/ao_rtaudio.cpp")
   target_compile_definitions(OPN2BankEditor PRIVATE "ENABLE_AUDIO_TESTING")
   target_link_libraries(OPN2BankEditor PRIVATE RtAudio)
 endif()
 
-add_executable(measurer
+add_executable(measurer_tool
   "utils/measurer/measurer.cpp")
-target_link_libraries(measurer PRIVATE FileFormats Measurer)
+set_target_properties(measurer_tool PROPERTIES OUTPUT_NAME "measurer")
+target_link_libraries(measurer_tool PRIVATE FileFormats Measurer)
