Travis-CI: Update Homebrew for a correct lftp install

--- a/.travis.yml
+++ b/.travis.yml
@@ -38,6 +38,7 @@ matrix:
           packages:
             - lftp
             - axel
+          update: true
       env:
         - _BUILD=macos
       before_install:
