--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,7 +3,7 @@
 #                             created 2016-08-09
 #--------------------------------------------------------------------------------
 
-version: 0.1.{build}
+version: 1.3.1.{build}
 
 branches:
   only:  # whitelist
@@ -21,9 +21,6 @@ skip_commits:
 # Operating system (build VM template)
 os: unstable
 
-environment:
-    APPVEYOR_BUILD_WORKER_IMAGE: "Visual Studio 2013"
-
 # clone directory
 clone_folder: C:\_Repos\OPN2BankEditor
 clone_depth:  3  # clone entire repository history if not defined
@@ -31,11 +28,24 @@ clone_depth:  3  # clone entire repository history if not defined
 # init:
 # - ps: iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
 
+environment:
+  matrix:
+    - APPVEYOR_BUILD_WORKER_IMAGE: "Visual Studio 2019"
+      PLATFORM: Win64
+      WINXX_ARCH: win64
+      COMPILER: C:\Qt\Tools\mingw810_64\bin
+      QT_DIR: C:\Qt\5.15\mingw81_64\bin
+    - APPVEYOR_BUILD_WORKER_IMAGE: "Visual Studio 2013"
+      PLATFORM: Win32
+      WINXX_ARCH: win32
+      COMPILER: C:\Qt\Tools\mingw530_32\bin
+      QT_DIR: C:\Qt\5.7\mingw53_32\bin # Qt since 5.8 no more supports Windows XP, Keep support for Windows XP yet
+
 install:
   - git submodule init
   - git submodule update
-  - echo set QtDir=C:\Qt\5.7\mingw53_32\bin>> _paths.bat
-  - echo set MinGW=C:\Qt\Tools\mingw530_32\bin>> _paths.bat
+  - echo set QtDir=%QT_DIR%>> _paths.bat
+  - echo set MinGW=%COMPILER%>> _paths.bat
   - echo set GitDir=C:\Program Files\Git\cmd>> _paths.bat
 
 build_script:
