Added VGM options to control the amount of imported instruments

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -83,6 +83,7 @@ set(FILEFORMATS_SOURCES
   "src/FileFormats/format_vgi.cpp"
   "src/FileFormats/format_bamboo_bti.cpp"
   "src/FileFormats/format_wohlstand_opn2.cpp"
+  "src/FileFormats/vgm_import_options.cpp"
   "src/FileFormats/ym2612_to_wopi.cpp"
   "src/FileFormats/ym2151_to_wopi.cpp"
   "src/FileFormats/text_format.cpp"
